fix(bug): The bottom right corner of the "This Week" section is too large.

--- a/src/thisWeekPopup.css
+++ b/src/thisWeekPopup.css
@@ -3,7 +3,7 @@
      position: fixed;
      bottom: 0;
      right: 0;
-     width: 80vw;
+     min-width: 20vw;
      max-width: 1000px;
      max-height: 38vh;
      overflow: auto;
@@ -15,6 +15,7 @@
      background-color: var(--ls-primary-background-color);
      font-size: .96em;
      z-index: 1;
+     resize: both;
 
      & a[data-ref=".thisweek"] {
          display: none;
